# segments

./: .gitignore  CMakeLists.txt  README.md
include/segments/: Point3D.h  Segment3D.h  Vector3D.h
src/: Segment3D.cpp  Vector3D.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
